# connected-data-lake

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  benchmark.sh  ceph-install.sh  ceph-ls.sh  ceph-reload.sh  ceph-status.sh  ceph-uninstall.sh  index.yaml  kafka-install.sh  kafka-uninstall.sh  minio-install.sh  minio-uninstall.sh  nats-install.sh  nats-uninstall.sh  pipe-uninstall.sh  pond-install.sh  pond-reload.sh  pond-status.sh  pond-uninstall.sh  storage-status.sh
.github/workflows/: helm_chart.yaml  maturin.yaml
benchmark/: Cargo.toml  config.yaml  receiver.yaml  sender.yaml  to_csv.py  visualize.py
benchmark/src/: args.rs  main.rs
benchmark/src/command/: create.rs  mod.rs  sync.rs
benchmark/src/ins/: branch.rs  checkout_context.rs  create_datasets.rs  create_ponds.rs  create_syncs.rs  elapsed_time.rs  mod.rs  static_metric.rs
bootstrap/: docker-buildkit.sh
charts/cdl-dataset/: README.md
charts/cdl-dataset/templates/: model.yaml.j2  model_claim.yaml.j2  model_storage_binding.yaml.j2
charts/cdl-endpoint/: Chart.yaml  README.md  values.yaml
charts/cdl-endpoint/templates/: _helpers.tpl  deployment.yaml.j2  ingress.yaml.j2  service.yaml.j2  serviceaccount.yaml.j2
charts/cdl-operator/: Chart.yaml  README.md  values.yaml
charts/cdl-operator/templates/: _helpers.tpl  deployment.yaml.j2  serviceaccount.yaml.j2
charts/data-pond/: README.md
charts/data-pond/templates/: storage.yaml.j2
clusters/: _binding.yaml  _common.yaml  _common_post.yaml  _common_pre.yaml  autodata-ai-compute-1.yaml  autodata-hot-storage-1.yaml  autodata-hot-storage-2.yaml  autodata-warm-storage-1.yaml  mobilex.yaml  netai-cloud.yaml
contrib/cdl-ip-broker/: Cargo.toml
contrib/cdl-ip-core/: Cargo.toml
contrib/cdl-ip-core/src/: lib.rs  node.rs  task.rs
contrib/cdl-ip-cpu/: Cargo.toml
contrib/cdl-ip-cpu/src/: args.rs  main.rs
contrib/cdl-ip-cxl/: Cargo.toml
contrib/cdl-ip-dpu/: Cargo.toml
contrib/cdl-ip-eth-tcp/: Cargo.toml
contrib/cdl-ip-eth-udp/: Cargo.toml
contrib/cdl-ip-linux-io-uring/: Cargo.toml
contrib/cdl-ip-linux-io-uring/src/: lib.rs  pipe.rs  task.rs
contrib/cdl-ip-linux-io-uring/src/node/: file.rs
contrib/cdl-ip-mem/: Cargo.toml
contrib/cdl-ip-nvme/: Cargo.toml
crates/cdl/: Cargo.toml
crates/cdl-catalog/: Cargo.toml
crates/cdl-catalog/src/: lib.rs
crates/cdl-core/: Cargo.toml
crates/cdl-core/src/: lib.rs
crates/cdl-fs/: Cargo.toml
crates/cdl-fs/src/: lib.rs
crates/cdl-fs/src/functions/: len.rs
crates/cdl-fuse/: Cargo.toml
crates/cdl-fuse/src/: fs.rs  lib.rs
crates/cdl-k8s-core/: Cargo.toml
crates/cdl-k8s-core/src/: env.rs  k8s_operator.rs  lib.rs  openapi.rs  otel.rs
crates/cdl-k8s-operator/: Cargo.toml
crates/cdl-k8s-operator/src/: main.rs
crates/cdl-k8s-operator/src/ctx/: mod.rs  model.rs  model_claim.rs  model_storage.rs  model_storage_binding.rs
crates/cdl-k8s-operator/src/optimizer/model_claim/: mod.rs  object.rs
crates/cdl-k8s-operator/src/validator/: model.rs  model_claim.rs  model_storage.rs  model_storage_binding.rs
crates/cdl-k8s-provider/: Cargo.toml
crates/cdl-k8s-provider/src/: kubernetes.rs  lib.rs  object.rs  parser.rs
crates/cdl-openapi/: Cargo.toml
crates/cdl-openapi/src/: lib.rs  model.rs  model_claim.rs  model_storage_binding.rs  model_user.rs
crates/cdl-openapi/src/model_storage/: mod.rs  object.rs
crates/cdl-store/: Cargo.toml
crates/cdl-store/src/: lib.rs
crates/cdl/src/: args.rs  main.rs
crates/cdl/src/command/: copy.rs  mod.rs  mount.rs  query.rs
etc/ai/: deployment-team-1.yaml  deployment-team-2.yaml  deployment-team-3.yaml  deployment-team-4.yaml  deployment-team-5.yaml  deployment-team-6.yaml
functions/python/: object_detection.py
jobs/: benchmark-nats.yaml  nats-ops.yaml  pipe-shell.yaml  video-input.yaml
models/: benchmark.yaml
python/: Cargo.toml  pyproject.toml
python/cdlake/: __init__.py  _internal.pyi  dataset.py  filesystem.py  lake.py
python/examples/: cdlake_cp.py  cdlake_fs.py  cdlake_lance_dataset.py  cdlake_list.py  cdlake_sql.py  cdlake_torch_dataset.py
python/src/: lib.rs
python/tests/: test_fs.py
