[workspace]
default-members = ["crates/cdl"]
members = ["crates/*", "python"]
exclude = ["crates/target"]
resolver = "2"

[workspace.package]
authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Connected Data Lake Framework"
documentation = "https://docs.rs/cdl"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["cdl", "data-lake", "kubernetes"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.82"
homepage = "https://github.com/ulagbulag/connected-data-lake"
repository = "https://github.com/ulagbulag/connected-data-lake"
version = "0.1.4"

[workspace.lints.clippy]
blocks_in_conditions = "allow" # opentelemetry tracing macro would be noisy

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
argon2 = { version = "0.5" }
arrow = { version = "52", default-features = false, features = [ # depends: lance
    "csv",
    "ipc",
    "json",

] }
async-trait = { version = "0.1" }
byte-unit = { version = "5.1" }
bytes = { version = "1.8" }
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive", "env", "string", "unicode"] }
datafusion = { version = "41.0", default-features = false, features = [ # depends: lance
    "array_expressions",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "math_expressions",
    "nested_expressions",
    "regex_expressions",
    "string_expressions",
    "unicode_expressions",
] }
email_address = { version = "0.2" }
filetime = { version = "0.2" }
fuser = { version = "0.15" }
futures = { version = "0.3" }
glob = { version = "0.3" }
inflector = { package = "Inflector", version = "0.11" }
itertools = { version = "0.13" }
k8s-openapi = { version = "0.23", features = ["schemars", "v1_30"] }
kube = { version = "0.96", default-features = false }
lance = { version = "0.20", default-features = false }
lance-core = { version = "0.20", default-features = false } # depends: lance
lance-encoding = { version = "0.20", default-features = false } # depends: lance
lance-io = { version = "0.20", default-features = false } # depends: lance
lance-table = { version = "0.20", default-features = false } # depends: lance
libc = { version = "0.2" }
maplit = { version = "1.0" }
minio = { version = "0.2.0-alpha", default-features = false }
object_store = { version = "0.10" } # depends: lance
opentelemetry = { version = "0.27" }
opentelemetry-appender-tracing = { version = "0.27", features = [
    # "experimental_metadata_attributes",
] }
opentelemetry-otlp = { version = "0.27" }
opentelemetry-proto = { version = "0.27", features = ["with-serde", "zpages"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
ordered-float = { version = "4.5", default-features = false, features = [
    "bytemuck",
    "std",
] }
prometheus-http-query = { version = "0.8", default-features = false }
pyo3 = { version = "0.21", features = [ # depends: lance
    "anyhow",
    "experimental-inspect",
    "macros",
] }
rand = { version = "0.8" }
regex = { version = "1.11" }
reqwest = { version = "0.12", default-features = false }
resolv-conf = { version = "0.7" }
schemars = { version = "0.8", features = [
    "chrono",
    "derive",
    "preserve_order",
    "uuid1",
] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
sio = { git = "https://github.com/ulagbulag/sio-rs.git" }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1" }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.28" } # should be synced with opentelemetry
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "tracing-log",
] }
url = { version = "2.5" }

[patch.crates-io]
# lance = { git = "https://github.com/lancedb/lance.git" }
# TODO: Wait for merge PR: https://github.com/lancedb/lance/pull/3146
lance = { git = "https://github.com/ulagbulag/lance.git", rev = "24f38842d47333925184f9501cd337fe4e2266b5" }
lance-core = { git = "https://github.com/ulagbulag/lance.git", rev = "24f38842d47333925184f9501cd337fe4e2266b5" }
lance-encoding = { git = "https://github.com/ulagbulag/lance.git", rev = "24f38842d47333925184f9501cd337fe4e2266b5" }
lance-io = { git = "https://github.com/ulagbulag/lance.git", rev = "24f38842d47333925184f9501cd337fe4e2266b5" }
lance-table = { git = "https://github.com/ulagbulag/lance.git", rev = "24f38842d47333925184f9501cd337fe4e2266b5" }
minio = { git = "https://github.com/minio/minio-rs.git", rev = "c28f576cb8f8cf47fb941bb9db62b2cbd6f080c1" }
