[package]
name = "cdl-python"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl-python"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
name = "cdlake"
crate-type = ["cdylib"]
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]

# TLS
default-tls = ["rustls-tls"]
openssl-tls = ["cdl-catalog/openssl-tls", "cdl-fs/openssl-tls"]
rustls-tls = ["cdl-catalog/rustls-tls", "cdl-fs/rustls-tls"]

[dependencies]
cdl-catalog = { path = "../crates/cdl-catalog", features = ["pyo3"] }
cdl-fs = { path = "../crates/cdl-fs" }

anyhow = { workspace = true }
ark-core = { workspace = true }
clap = { workspace = true }
deltalake = { workspace = true, features = ["python"] }
futures = { workspace = true }
pyo3 = { workspace = true, features = [
    "abi3-py310",
    "anyhow",
    "chrono",
    "chrono-tz",
    "experimental-async",
    "extension-module",
    "macros",
    "nightly",
    "serde",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
