[package]
name = "cdl-ip-linux-io-uring"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl-ip-linux-io-uring"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing = ["dep:tracing"]

[dependencies]
cdl-ip-core = { workspace = true, features = ["local"] }

anyhow = { workspace = true }
io-uring = { workspace = true }
nix = { workspace = true, features = ["fs", "zerocopy"] }
tracing = { workspace = true, optional = true }
