[package]
name = "cdl-catalog"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl-catalog"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "url/serde"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
lance = { workspace = true }
lance-table = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
url = { workspace = true }
