[package]
name = "cdl-core"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl-catalog"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
pyo3 = ["tokio/full"]

[package.metadata.docs.rs]
features = ["pyo3"]
no-default-features = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
