[package]
name = "cdl-fs"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl-fs"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# TLS
openssl-tls = ["deltalake/s3-native-tls"]
rustls-tls = ["deltalake/s3"]

[dependencies]
cdl-catalog = { path = "../cdl-catalog" }

anyhow = { workspace = true }
chrono = { workspace = true }
deltalake = { workspace = true, features = ["datafusion"] }
filetime = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
