[package]
name = "cdl-fuse"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl-fuse"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdl-catalog = { path = "../cdl-catalog" }
cdl-fs = { path = "../cdl-fs" }

anyhow = { workspace = true }
async-trait = { workspace = true }
fuser = { workspace = true }
lance = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
