[package]
name = "cdl-k8s-operator"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]

# TLS
default-tls = ["rustls-tls"]
openssl-tls = [
    "cdl-k8s-core/openssl-tls",
    "cdl-k8s-provider/rustls-tls",
    "kube/openssl-tls",
    "prometheus-http-query/native-tls",
]
rustls-tls = [
    "cdl-k8s-core/rustls-tls",
    "cdl-k8s-provider/rustls-tls",
    "kube/rustls-tls",
    "prometheus-http-query/rustls-tls",
]

[package.metadata.docs.rs]
features = ["openssl-tls", "rustls-tls"]
no-default-features = true

[dependencies]
cdl-k8s-core = { workspace = true, features = [
    "env",
    "k8s-operator",
    "opentelemetry-all",
    "opentelemetry-otlp",
] }
cdl-k8s-provider = { workspace = true }
cdl-openapi = { workspace = true, features = ["k8s"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
byte-unit = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
inflector = { workspace = true }
itertools = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["client", "runtime", "ws"] }
prometheus-http-query = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
