[package]
name = "cdl-store"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl-log-store"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdl-catalog = { path = "../cdl-catalog" }

async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
lance-core = { workspace = true }
lance-io = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
url = { workspace = true }
