[package]
name = "cdl"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]

# TLS
default-tls = ["rustls-tls"]
openssl-tls = ["cdl-fs/openssl-tls", "cdl-fuse/openssl-tls"]
rustls-tls = ["cdl-fs/rustls-tls", "cdl-fuse/openssl-tls"]

[dependencies]
cdl-catalog = { path = "../cdl-catalog" }
cdl-fs = { path = "../cdl-fs" }
cdl-fuse = { path = "../cdl-fuse" }

anyhow = { workspace = true }
ark-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
