[package]
name = "cdl"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cdl"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# H/W
gpu-nvidia = ["cdl-fs/gpu-nvidia"]

[dependencies]
cdl-catalog = { path = "../cdl-catalog" }
cdl-fs = { path = "../cdl-fs" }
cdl-k8s-core = { path = "../cdl-k8s-core", features = ["opentelemetry-all"] }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
cdl-fuse = { path = "../cdl-fuse" }
